--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ sudo apt list --installed |grep automake nazwaprogramu
 2. Jezeli nie posiadasz na swoim systemie danych programow uzyj polecenia:
 sudo apt-get install nazwaprogramu
 3. Rozpakuj dany program uzywajac terminalu graficznego lub polecenia w terminalu:
-tar -xzvf Zadanie2.tar.gz -C /'nazwa_folderu'
+tar -xzvf pole_i_objetosc-O.2_ver.tar.gz -C /'nazwa_folderu'
 4. W danym folderze z programem uzyj nastepujacej komend w nastepujacej kolejnosci:
 autoreconf -i
 aclocal
