--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,7 @@ program Ver. 0.3 podpunkt c
 1. Sprawdz czy masz zainstalowane programy:
 automake, autoconf, libtool oraz gcc
 Mozna to sprawdzic poleceniem:
-sudo apt list --installed |grep automake nazwaprogramu
+sudo apt list --installed |grep nazwaprogramu
 2. Jezeli nie posiadasz na swoim systemie danych programow uzyj polecenia:
 sudo apt-get install nazwaprogramu
 3. Rozpakuj dany program uzywajac terminalu graficznego lub polecenia w terminalu:
